--- a/appdriver/build.gradle
+++ b/appdriver/build.gradle
@@ -10,6 +10,7 @@
  */
 
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 android {
     compileSdk 34
@@ -36,6 +37,18 @@ android {
 
     packagingOptions {
         resources.merges.add("core.properties")
+    }
+
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+            withJavadocJar()
+        }
+
+        singleVariant('debug') {
+            withSourcesJar()
+            withJavadocJar()
+        }
     }
 }
 
@@ -87,3 +100,33 @@ dependencies {
     implementation files('libs/javax.persistence_2.1.0.v201304241213.jar')
     implementation files('libs/sqldroid-1.1.0-rc1.jar')
 }
+
+afterEvaluate{
+
+    publishing {
+
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.GGCAndroidAppDriver'
+                artifactId = 'AppDriver'
+                version = '1.1'
+            }
+        }
+
+        repositories {
+            maven {
+                name = 'GitHubPackages'
+                url = uri("https://github.com/MIS-SEG-Android-Team/AppDriver")
+                credentials {
+                    username = project.findProperty("gpr.user") ?: System.getenv("mikegarcia8748")
+                    password = project.findProperty("gpr.key") ?: System.getenv("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")
+                }
+            }
+        }
+    }
+}
+
+
+
