--- a/appdriver/build.gradle
+++ b/appdriver/build.gradle
@@ -20,6 +20,14 @@ android {
         minSdk 21
         targetSdk 34
 
+        // used by Room, to test migrations
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation":
+                                      "$projectDir/schemas".toString()]
+            }
+        }
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -34,6 +42,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     namespace 'org.rmj.g3appdriver'
+
+    // used by Room, to test migrations
+    sourceSets {
+        androidTest.assets.srcDirs +=
+                files("$projectDir/schemas".toString())
+    }
 
     packagingOptions {
         resources.merges.add("core.properties")
@@ -56,8 +70,11 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.room:room-runtime:2.5.1'
-    implementation 'androidx.sqlite:sqlite:2.3.1'
+    implementation 'androidx.room:room-runtime:2.6.0'
+    implementation 'androidx.room:room-testing:2.6.0'
+    implementation 'androidx.sqlite:sqlite:2.4.0'
+    androidTestImplementation "androidx.room:room-testing:2.6.0"
+    testImplementation 'org.json:json:20140107'
     implementation 'androidx.test:core:1.5.0'
     implementation 'androidx.test.ext:junit:1.1.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -75,7 +92,7 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0@aar'
     implementation 'com.google.android.play:core:1.10.3'
     androidTestImplementation 'org.testng:testng:7.4.0'
-    annotationProcessor 'androidx.room:room-compiler:2.5.1'
+    annotationProcessor 'androidx.room:room-compiler:2.6.0'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.huawei.hms:maps:4.0.1.302'
