--- a/appdriver/build.gradle
+++ b/appdriver/build.gradle
@@ -72,11 +72,13 @@ dependencies {
     implementation 'androidx.sqlite:sqlite:2.3.1'
     implementation 'androidx.test:core:1.5.0'
     implementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-messaging:23.1.2'
     implementation 'com.google.firebase:firebase-crashlytics:18.3.7'
     implementation 'com.google.firebase:firebase-storage:20.2.0'
     implementation 'androidx.room:room-testing:2.6.1'
+    implementation 'com.google.firebase:protolite-well-known-types:18.0.0'
     testImplementation 'org.json:json:20140107'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.5.2'
